feature(Mapping): test implementation